fix: Correct icon path in colours and indigo pages; update styles for better layout and alignment

--- a/pages/indigo/styles.css
+++ b/pages/indigo/styles.css
@@ -8,28 +8,32 @@ body {
     background: black;
     color: white;
     margin: 0;
-    text-align: left;
+    text-align: center;
     padding: 0 1rem 0 1rem;
 }
 .chart {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    gap: 10px;
+    /* grid-template-columns: repeat(auto-fill, minmax(11.25rem, 1fr));  */
+    grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+    gap: 0.6rem;
     padding-top: 1.75rem;
     border-top: 1px solid #C0C0C0;
 }
 .color-box {
-    padding: 20px;
-    height: 100px;
+    /* padding: 1.25rem;
+    height: 6.25rem;     */
+    padding: 1.25rem;
+    height: 8rem;  
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-radius: 8px;
+    border-radius: 0.2rem;
 }
 .color-name {
     font-weight: bold;
     font-size: 1em;
+    text-transform: uppercase;
 }
 .hex {
     font-size: 0.9em;
@@ -37,6 +41,7 @@ body {
 h1{
     padding: 1rem 0 0 1rem;
     color: #ebf6f7;
+    text-align: left;
 }
 a {
     text-decoration: none;
